--- a/numberGuesser.css
+++ b/numberGuesser.css
@@ -1,21 +1,14 @@
 body {
   font-family: "Open Sans", sans-serif;
-  height: 100%;
   margin: 0;
   padding: 0;
-  background: #F5F5F5;
-  /*font-weight: 700;*/
   letter-spacing: 1px;
 
 }
 #wrapper {
   display: block;
-  width: 1000px;
+  width: 100%;
   background: #FFFFFF;
-  border: solid 10px #808184;
-  margin: 40px auto 0px auto;
-  /*border-top: 60px;*/
-
 }
 header {
   background: #404041;
@@ -48,16 +41,20 @@ main {
   margin-left: auto; margin-right: auto;
 }
 
-#minRange, #maxRange {
+#defineRange {
   font-size: 26px;
-  color: #7D7D7D;
+  font-weight: 100;
+  color: #929497;
+  text-align: center;
+
+}
+#minRange, #maxRange {
   display: block;
   width: 414px;
+  font-weight: 100;
+  font-size: 26px;
+  border: solid 2px #929497;
 }
-
-
-
-
 
 #userGuess {
   width: 414px;
@@ -65,14 +62,15 @@ main {
   height: 40px;
   font-size: 26px;
   font-weight: 200;
+  border: solid 2px #929497;
 }
-
 
 #guessButton {
   margin-right: 40px;
+
 }
 .submitButtons {
-  /*background: #D0D2D3;*/
+  background: #D0D2D3;
   color: #FFFFFF;
   width: 190px;
   float: left;
@@ -85,11 +83,16 @@ main {
 
 }
 
-#gameResults {
+.gameResults {
   margin-top: 90px; margin-bottom: 50px;
-  border: solid 2px #D0D2D3;
-  height: 422px;
+  border: solid 2px #ED458B;
+  height: auto;
+  min-height: 422px;
   width: 416px;
+  font-size: 30px;
+  text-align: center;
+  font-weight: 100;
+  color: #7D7D7D;
 }
 
 #userGuessValue {
@@ -98,17 +101,11 @@ main {
   font-weight: 10;
   margin: 0;
 }
-p {
-  font-size: 30px;
-  text-align: center;
-  font-weight: 100;
-  color: #7D7D7D;
-}
+
 
 
 #resetButton {
   display: block;
-  /*background: #D0D2D3;*/
   color: #FFFFFF;
   margin-left: auto;
   margin-right: auto;
@@ -121,38 +118,23 @@ p {
   font-size: 26px;
   font-weight: 200;
   letter-spacing: 1px;
+  background: #D0D2D3;
 }
 
 #guessButton:hover, #clearButton:hover, #resetButton:hover {
   background: #EB008B;
 }
 
-
-
-#guessButton, #clearButton, #resetButton :disabled {
-  background: #D0D2D3;
-}
-
-#guessButton, #clearButton, #resetButton :enabled {
-  background: #929497;
-}
-/*
-button:enabled {
-  background: #929497;
-}
-
-button:disabled {
-  background: #D0D2D3;
-}
-
-#resetButton:enabled {
-  background: #929497;
-}
-
-#resetButton:disabled {
+/*#guessButton, #clearButton, #resetButton :disabled {
   background: #D0D2D3;
 }
 */
+/*#guessButton, #clearButton, #resetButton :enabled {
+  background: #929497;
+}*/
+.enableClass {
+  background: #929497;
+}
 
 input:focus, button:focus {
   outline: dotted 0.5px #EB008B;
