--- a/numberGuesser.css
+++ b/numberGuesser.css
@@ -46,8 +46,24 @@ main {
   font-weight: 100;
   color: #929497;
   text-align: center;
-
 }
+
+#instructionButton {
+  display: block;
+  color: #FFFFFF;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: none;
+  border-radius: 20px;
+  width: 420px;
+  height: 38px;
+  font-size: 26px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  background: #D0D2D3;
+  margin-top: 20px;
+}
+
 .rangeButtons {
   display: inline-block;
   width: 150px;
@@ -123,7 +139,7 @@ main {
   background: #D0D2D3;
 }
 
-#guessButton:hover, #clearButton:hover, #resetButton:hover {
+#guessButton:hover, #clearButton:hover, #resetButton:hover, #instructionButton:hover {
   background: #EB008B;
 }
 
