--- a/numberGuesser.css
+++ b/numberGuesser.css
@@ -5,19 +5,19 @@ body {
   letter-spacing: 1px;
 
 }
+
 #wrapper {
   display: block;
   width: 100%;
   background: #FFFFFF;
 }
+
 header {
   background: #404041;
   width: 100%;
   height: 100px;
   text-align: center;
   display: table;
-
-
 }
 
 h1 {
@@ -38,7 +38,8 @@ h1 {
 main {
   width: 420px;
   height: 100%;
-  margin-left: auto; margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #defineRange, #instructions {
@@ -139,7 +140,10 @@ main {
   background: #D0D2D3;
 }
 
-#guessButton:hover, #clearButton:hover, #resetButton:hover, #instructionButton:hover {
+#guessButton:hover,
+#clearButton:hover,
+#resetButton:hover,
+#instructionButton:hover {
   background: #EB008B;
 }
 
