--- a/numberGuesser.css
+++ b/numberGuesser.css
@@ -3,31 +3,37 @@ body {
   margin: 0;
   padding: 0;
   letter-spacing: 1px;
-
-}
-
-#wrapper {
-  display: block;
-  width: 100%;
-  background: #FFFFFF;
 }
 
 header {
   background: #404041;
   width: 100%;
   height: 100px;
-  text-align: center;
   display: table;
 }
 
+.wrapper {
+  display: block;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+main {
+  width: 58%;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 h1 {
-  margin: 0;
-  padding: 0;
+  color: #E6E7E8;
+  font-size: 5.3vw;
+  font-weight: 300;
+  text-align: center;
   display: table-cell;
   vertical-align: middle;
-  color: #E6E7E8;
-  font-size: 48px;
-  font-weight: 300;
+  margin-bottom: 0
 }
 
 #number {
@@ -35,109 +41,97 @@ h1 {
   font-weight: 700;
 }
 
-main {
-  width: 420px;
-  height: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#instructions {
-  font-size: 26px;
+.instructions {
+  font-size: 26;
   font-weight: 300;
   color: #929497;
   text-align: center;
+  width: 100%;
+  height: 50px;
+  letter-spacing: 1px;
 }
 
 #instructionButton {
   display: block;
+  width: 100%;
   color: #FFFFFF;
-  margin-left: auto;
-  margin-right: auto;
   border-style: none;
-  border-radius: 20px;
-  width: 420px;
-  height: 38px;
+  border-radius: 40px;
+  height: 60px;
   font-size: 26px;
   font-weight: 300;
-  letter-spacing: 1px;
   background: #D0D2D3;
-  margin-top: 20px;
+  letter-spacing: 1px;
+}
+
+.defineRange {
+  width: 100%;
+  margin-top: 40px;
 }
 
 .rangeButtons {
-  display: inline-block;
+  float: left;
   font-weight: 300;
   font-size: 26px;
-  width: 190px;
+  width: 46%;
+  height: 60px;
   letter-spacing: 1px;
 }
 
 #minRange {
-  margin-right: 24px;
+  margin-right: 5%;
 }
 
+.mainGame {
+  width: 100%;
+}
 #userGuess {
-  width: 414px;
-  margin-top: 50px; margin-bottom: 50px;
-  height: 40px;
+  height: 60px;
+  width: 98%;
+  margin-top: 4px;
   font-size: 26px;
   font-weight: 300;
-}
-
-#guessButton {
-  margin-right: 40px;
 
 }
+
 .submitButtons {
   background: #D0D2D3;
   color: #FFFFFF;
-  width: 190px;
+  width: 48%;
   float: left;
   border-style: none;
-  border-radius: 20px;
-  height: 40px;
+  border-radius: 40px;
+  height: 60px;
   font-size: 26px;
   font-weight: 300;
-  margin-top: -20px;
+  margin-top: 20px;
+}
 
+#guessButton {
+  margin-right: 3%;
 }
 
 .gameResults {
-  margin-top: 90px; margin-bottom: 50px;
   height: auto;
-  /*min-height: 422px;*/
-  width: 416px;
+  width: 100%;
+  padding-top: 60px;
   font-size: 30px;
   text-align: center;
   font-weight: 300;
   color: #929497;
+  line-height: 0;
 }
 
 #userGuessValue {
-  font-size: 160px;
+  font-size: 120px;
   color: #ED458B;
-  font-weight: 300;
-  margin: 0;
+  line-height: 0;
 }
 
-
-
-#resetButton {
-  display: block;
-  color: #FFFFFF;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: none;
-  border-radius: 20px;
-  width: 420px;
-  height: 38px;
-  margin-bottom: 50px;
-  margin-top: -10px;
-  font-size: 26px;
-  font-weight: 300;
-  letter-spacing: 1px;
-  background: #D0D2D3;
+#resetButton
+{
+  margin-top: 10px;
+  width: 100%
 }
 
 #guessButton:hover,
@@ -163,17 +157,20 @@ input:focus, button:focus {
   outline: dotted 0.5px #EB008B;
 }
 
-@media screen and (max-width: 550px) {
-    .submitButtons {
-        display: block;
-        width: 414px;
-    }
+@media screen and (max-width: 1000px) {
+  h1 {
+    font-size: 8vw;
+  }
+}
+@media screen and (max-width: 800px) {
+  .wrapper {
+    width: 90%;
+  }
 
-    #clearButton {
-      margin-top: 20px;
-    }
-
-    .gameResults {
-      margin-top: 140px;
-    }
+  .submitButtons,
+  .rangeButtons {
+      display: block;
+      float: none;
+      width: 100%
+  }
 }
